# quizazz

./: .gitignore  README.md  install.sh  serve.py
app/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
app/src/: app.css
app/src/lib/components/: AnsweredQuestionsView.svelte  ConfigView.svelte  ManifestUpload.svelte  NavigationTree.svelte  ProgressBar.svelte  QuizChooser.svelte  QuizView.svelte  ReviewView.svelte  SummaryView.svelte
app/src/lib/data/: index.ts  manifest.json  questions.json
app/src/lib/db/: database.ts  index.ts  scores.ts
app/src/lib/engine/: lifecycle.ts  mastery.ts  presentation.ts  scoring.ts  selection.ts
app/src/lib/stores/: manifest.ts  quiz.ts
app/src/lib/types/: index.ts
app/src/lib/utils/: format.ts  random.ts  (+1 more)
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/tests/db/: scores.test.ts
app/tests/engine/: mastery.test.ts  presentation.test.ts  scoring.test.ts  selection.test.ts
app/tests/integration/: edge-cases.test.ts  lifecycle.test.ts  navigation.test.ts  tags.test.ts
app/tests/stores/: manifest.test.ts
app/tests/utils/: format.test.ts  random.test.ts  validate-manifest.test.ts
builder/: pyproject.toml
builder/src/quizazz_builder/: __init__.py  __main__.py  cli.py  compiler.py  manifest.py  models.py  validator.py
builder/tests/: test_cli.py  test_compiler.py  test_manifest.py  test_models.py  test_validator.py
data/questions/: sample.yaml
data/quiz/: sample.yaml
data/quiz/advanced/: advanced_sample.yaml
docs/specs/: features.md  stories.md  tech_spec.md
