[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizazz-builder"
version = "0.1.0"
description = "YAML question bank validator and compiler for Quizazz"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Pointmatic" },
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[project.scripts]
quizazz-builder = "quizazz_builder.__main__:main"
quizazz_builder = "quizazz_builder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
